--- a/csf_assign06/README
+++ b/csf_assign06/README
@@ -14,5 +14,6 @@ begin.
 Alexandra Szewc     aszewc1@jhu.edu
  - added pthread functionality to calcServer
  - added mutex to calc.cpp
+ -write-up
 
 Victor Wen          vwen2@jhu.edu
